# salient-core-public

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXTRACTION.md  IMAGES.md
imgs/: _overlay.py
src/salient_core/: __init__.py  codex.py  codex_mcp.py
src/salient_core/daemon/: _runner_factory.py  runner.py
src/salient_core/policy/: safeguards.py  scope.py  scope_evaluation.py  scope_placeholders.py
src/salient_core/worker_protocol/: __init__.py  codec.py  fake.py  session.py  types.py
tests/: test_codex_mcp_gateway.py  test_codex_provider.py  test_policy_scope_evaluation.py  test_prompt_admission.py  test_scope_extractors.py  test_worker_protocol.py  test_worker_protocol_review.py
tests/golden/worker_protocol/: call_read_file.json  call_run_command.json  control_terminate.json  hello.json  ping.json
