[project]
name = "salient-core"
version = "0.7.17"
description = "A multi-agent coordination kernel with policy gates, knowledge graph, and operator-mediated delegation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [{ name = "Jon O'Brien" }]
keywords = ["agents", "multi-agent", "coordination", "mcp", "knowledge-graph", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "claude-agent-sdk>=0.2.110,<0.3",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/baggybin/salient-core"
Repository = "https://github.com/baggybin/salient-core"
Issues = "https://github.com/baggybin/salient-core/issues"
Changelog = "https://github.com/baggybin/salient-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
codex = [
    "openai-codex==0.1.0b3",
    "openai-codex-cli-bin==0.137.0a4",
    "mcp>=1.0,<2",
]
dev = [
    "ruff==0.15.20",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-subtests>=0.12",
    "pyyaml>=6.0",
]

[build-system]
# ≥77 for stable SPDX `license` + `license-files` (PEP 639) support.
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the PEP 561 marker so downstream apps (salient-tutor, downstream skins)
# type-check against the kernel's annotations, plus the runtime prompt addenda
# the runner factory loads when assembling agent system prompts.
[tool.setuptools.package-data]
salient_core = ["py.typed", "prompts/*.md"]

# ── ruff ─────────────────────────────────────────────────────────────
# Fresh codebase: both lint AND format. Correctness-over-style ruleset
# (F/B/C4) inherited from the parent project; formatter is enabled since
# salient-core has no legacy alignment to preserve.
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "B", "C4", "I", "UP"]
ignore = [
    "F403",   # star imports are a deliberate shared-helper pattern in bus/
    "F405",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B008", "B011"]

[tool.format]
# Default settings — no deliberate alignment to preserve in a fresh codebase.

# ── mypy ─────────────────────────────────────────────────────────────
# Relaxed from strict — the kernel modules are copied from salient which
# was never type-checked. Tighten incrementally as modules are rewritten.
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
# attr-defined disabled: kernel uses mixin classes that reference attributes
# defined on the consuming Daemon. mypy can't validate this without Protocol
# annotations on every mixin. Re-enable when the Daemon class is extracted.
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["claude_agent_sdk.*", "openai_codex", "openai_codex.*"]
ignore_missing_imports = true

# numpy is an undeclared, best-effort accelerator (memory.embeddings guards
# the import behind try/except); yaml ships without inline stubs. Neither is a
# hard dependency, so silence the missing-stub noise rather than pin types.
[[tool.mypy.overrides]]
module = ["numpy", "yaml"]
ignore_missing_imports = true

# Not-yet-ported kernel submodules. These live in the upstream `salient`
# distribution and are pulled in via lazy/optional imports (guarded by
# try/except or fired only when a downstream skin provides them). Until they
# land in salient-core, tell mypy the absent modules are expected.
[[tool.mypy.overrides]]
module = [
    "salient_core.minimax",
    "salient_core.tools",
    "salient_core.engagement",
    "salient_core.skills",
    "salient_core.techniques",
    "salient_core.truncate",
    "salient_core.action_class",
    "salient_core.plugins",
    "salient.sim.mcp_tools",
]
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["salient_core"]
branch = true

[tool.coverage.report]
fail_under = 30  # interim — raise to 80 after kernel Daemon lands (P4+)
show_missing = true
